--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,12 @@ tasks.withType(JavaCompile) {
 dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
-    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    //  Đây là dependency của Spring Web MVC.
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.23'
-    // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5
+    // Đây là dependency của Thymeleaf, một Java template engine dùng để tạo các view động trong ứng dụng web.
     implementation group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.1.1.RELEASE'
-    // https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
+    // Đây là một Thymeleaf Dialect, cho phép sử dụng các thẻ bổ sung để hỗ trợ tạo layout trong Thymeleaf.
     implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.1.0'
-
 
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
